# cinescope-autotests

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BEST_PRACTICES.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
tests/: config.py  conftest.py  constants.py
tests/api/: test_auth.py  test_create_movie.py  test_delete_movie.py  test_edit_movie.py  test_genres.py  test_get_movie_by_id.py  test_get_movies.py  test_mock_movie.py  test_payments.py  test_reviews.py  test_users.py
tests/clients/: api_manager.py  auth_api.py  movies_api.py  payment_api.py  users_api.py
tests/constants/: endpoints.py  log_messages.py  payment_data.py  test_payment_data_and_ui_data.py  timeouts.py  ui_data.py
tests/models/: auth.py  enums.py  genre.py  movie.py  movie_models.py  movies_list.py  payment_models.py  request_models.py  response_models.py  review.py  user.py  user_models.py
tests/request/: custom_requester.py  test_custom_requester.py
tests/ui/: test_main_page.py  test_movie_details_page.py  test_movies_page.py  test_payment_page.py  test_payment_url_matching.py  test_ui_auth.py
tests/ui/pages/: base_page.py  login_page.py  main_page.py  movie_details_page.py  movies_page.py  payment_page.py  payment_success_page.py  register_page.py
tests/utils/: data_generator.py  decorators.py  test_data_generator.py
